# Module8

./: .env.sample  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
